# bayyinah-audit-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bayyinah_audit_mcp/: __init__.py  __main__.py  config.py  sections.py  server.py
bayyinah_audit_mcp/data/: section_index.json
bayyinah_audit_mcp/tools/: __init__.py  audit_artifact.py  check_attributions.py  cross_vendor_audit.py  furqan_lint.py  generate_round_report.py  list_sections.py  lookup_section.py
docs/: Bayyinah-MCP-Server-Setup-Guide.docx
docs/audit-chain/: CROSS-VENDOR-AUDIT-V05-PATCH-STRESS.md  CROSS-VENDOR-AUDIT-V05.md  HANDOFF-FOR-BILAL.md  HANDOFF-FOR-SECOND-CLAUDE.md  LANE-3-CONTRACT-V05.md  PATCHES.md  REVIEW-V1.md  REVIEW-V2.md  REVIEW-V3.md  REVIEW-V4.md  REVIEW-V5.md  REVIEW-V6.md  SUBSTRATE-RECONCILIATION-V05.md  _pretag-step2-sandbox-verification.md  _reply-to-second-claude-skeptical-persona-calibration.md  _skeptical-persona-rationale.md  _skeptical-persona-suffix.py  _skeptical-reviewer-context.py
tests/: test_smoke.py  test_tools.py
